Updated application.properties file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,13 +9,15 @@ server.port=8070
 #spring.datasource.initialization-mode=always
 
 #feign clients settings
-auth.feign.client=http://localhost:8080/authapp
+#auth.feign.client=http://localhost:8080/authapp
+auth.feign.client=http://authservice1.us-east-2.elasticbeanstalk.com/authapp
 auth.feign.name=authapp
 
 offer.feign.client=http://localhost:8000/offer
 offer.feign.name=offer-service
 
-points.feign.client=http://localhost:8090/points
+#points.feign.client=http://localhost:8090/points
+points.feign.client=http://pointservice1.us-east-2.elasticbeanstalk.com/points
 points.feign.name=points-service
 
 
